// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gardener-dashboard-terminal-bootstrapper clusterrolebinding should render the template with default values 1`] = `
Object {
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "ClusterRoleBinding",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "terminal-bootstrapper",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-application-0.1.0",
    },
    "name": "gardener.cloud:system:dashboard-terminal-bootstrapper",
  },
  "roleRef": Object {
    "apiGroup": "rbac.authorization.k8s.io",
    "kind": "ClusterRole",
    "name": "gardener.cloud:system:dashboard-terminal-bootstrapper",
  },
  "subjects": Array [
    Object {
      "kind": "ServiceAccount",
      "name": "gardener-dashboard-terminal-bootstrapper",
      "namespace": "garden",
    },
  ],
}
`;

exports[`gardener-dashboard-terminal-bootstrapper clusterrolebinding when virtual garden is enabled should render the template 1`] = `
Object {
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "ClusterRoleBinding",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "terminal-bootstrapper",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-application-0.1.0",
    },
    "name": "gardener.cloud:system:dashboard-terminal-bootstrapper",
  },
  "roleRef": Object {
    "apiGroup": "rbac.authorization.k8s.io",
    "kind": "ClusterRole",
    "name": "gardener.cloud:system:dashboard-terminal-bootstrapper",
  },
  "subjects": Array [
    Object {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "User",
      "name": "runtime-cluster:system:serviceaccount:garden:gardener-dashboard-terminal-bootstrapper",
    },
  ],
}
`;
